crates/luck_bundler/tests/snapshots/integration__basic_bundle.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded=type(package)=="table" and type(package.loaded)=="table" and package.loaded or {}
local __luck_preload=type(package)=="table" and type(package.preload)=="table" and package.preload or {}
local __luck_paths={}
local function __luck_require(name)
local value=__luck_loaded[name]
if value then return value end
local loaderdata
local loader=__luck_preload[name]
if loader then
loaderdata=":preload:"
else
loader=__luck_modules[name]
loaderdata=__luck_paths[name]
end
value=loader(name,loaderdata)
if value~=nil then __luck_loaded[name]=value end
value=__luck_loaded[name]
if value==nil then
value=true
__luck_loaded[name]=value
end
return value,loaderdata
end
-- module "utils": utils.lua
__luck_modules["utils"]=function(...)
local utils = {}

function utils.add(a, b)
    return a + b
end

return utils
end
__luck_paths["utils"]="utils.lua"
local __luck_entry=function(...)
local utils = __luck_require("utils")

local result = utils.add(2, 3)
print(result)
return result
end
return __luck_entry(...)
end
