crates/luck_bundler/tests/snapshots/integration__diamond_deps.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded=type(package)=="table" and type(package.loaded)=="table" and package.loaded or {}
local __luck_preload=type(package)=="table" and type(package.preload)=="table" and package.preload or {}
local __luck_paths={}
local function __luck_require(name)
local value=__luck_loaded[name]
if value then return value end
local loaderdata
local loader=__luck_preload[name]
if loader then
loaderdata=":preload:"
else
loader=__luck_modules[name]
loaderdata=__luck_paths[name]
end
value=loader(name,loaderdata)
if value~=nil then __luck_loaded[name]=value end
value=__luck_loaded[name]
if value==nil then
value=true
__luck_loaded[name]=value
end
return value,loaderdata
end
-- module "d": d.lua
__luck_modules["d"]=function(...)
local d = {
    base = 10
}

return d
end
__luck_paths["d"]="d.lua"
-- module "b": b.lua
__luck_modules["b"]=function(...)
local d = __luck_require("d")

local b = {}

function b.value()
    return d.base + 1
end

return b
end
__luck_paths["b"]="b.lua"
-- module "c": c.lua
__luck_modules["c"]=function(...)
local d = __luck_require("d")

local c = {}

function c.value()
    return d.base + 2
end

return c
end
__luck_paths["c"]="c.lua"
local __luck_entry=function(...)
local b = __luck_require("b")
local c = __luck_require("c")

local result = b.value() + c.value()
print(result)
return result
end
return __luck_entry(...)
end
