crates/luck_bundler/tests/snapshots/integration__lua53_bitwise_ops.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded=type(package)=="table" and type(package.loaded)=="table" and package.loaded or {}
local __luck_preload=type(package)=="table" and type(package.preload)=="table" and package.preload or {}
local __luck_paths={}
local function __luck_require(name)
local value=__luck_loaded[name]
if value then return value end
local preloader=__luck_preload[name]
if preloader then
value=preloader(name)
else
value=__luck_modules[name](name,__luck_paths[name])
end
if value~=nil then __luck_loaded[name]=value end
value=__luck_loaded[name]
if value==nil then
value=true
__luck_loaded[name]=value
end
return value
end
-- module "bits": bits.lua
__luck_modules["bits"]=function(...)
local x = 0xFF & 0x0F
local y = x | 0xF0
local z = x ~ y
return {x=x, y=y, z=z}
end
__luck_paths["bits"]="bits.lua"
local __luck_entry=function(...)
local bits = __luck_require("bits")
print(bits.x, bits.y, bits.z)
end
return __luck_entry(...)
end
