crates/luck_bundler/tests/snapshots/integration__lua54_const_close_attrs.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded=type(package)=="table" and type(package.loaded)=="table" and package.loaded or {}
local __luck_preload=type(package)=="table" and type(package.preload)=="table" and package.preload or {}
local __luck_paths={}
local function __luck_require(name)
local value=__luck_loaded[name]
if value then return value end
local loaderdata
local loader=__luck_preload[name]
if loader then
loaderdata=":preload:"
else
loader=__luck_modules[name]
loaderdata=__luck_paths[name]
end
value=loader(name,loaderdata)
if value~=nil then __luck_loaded[name]=value end
value=__luck_loaded[name]
if value==nil then
value=true
__luck_loaded[name]=value
end
return value,loaderdata
end
-- module "attrs": attrs.lua
__luck_modules["attrs"]=function(...)
local x <const> = 42
return x
end
__luck_paths["attrs"]="attrs.lua"
local __luck_entry=function(...)
local attrs = __luck_require("attrs")
print(attrs)
end
return __luck_entry(...)
end
