crates/luck_bundler/tests/snapshots/integration__luau_init_luau.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded={}
local __luck_loading={}
local function __luck_result(...)
if select("#",...)~=1 or (...)==nil then
error("luck bundle: module must return exactly one non-nil value",0)
end
return ...
end
local function __luck_require(id)
local value=__luck_loaded[id]
if value~=nil then
if value==__luck_loading then error("luck bundle: require cycle hit while loading module #"..id,2)end
return value
end
__luck_loaded[id]=__luck_loading
value=__luck_result(__luck_modules[id]())
__luck_loaded[id]=value
return value
end
-- module #1: __luck_components_button
__luck_modules[1]=function(...)
local button = {}

button.label = "Click Me"

return button
end
-- module #2: __luck_components_init
__luck_modules[2]=function(...)
local button = __luck_require(1)

local components = {}

components.name = "ComponentLib"
components.button = button

return components
end
local __luck_entry=function(...)
local components = __luck_require(2)

print(components.name)
print(components.button.label)
return components
end
return __luck_entry(...)
end
