crates/luck_bundler/tests/snapshots/integration__luau_luaurc_inheritance.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded={}
local __luck_loading={}
local function __luck_result(...)
if select("#",...)~=1 or (...)==nil then
error("luck bundle: module must return exactly one non-nil value",0)
end
return ...
end
local function __luck_require(id)
local value=__luck_loaded[id]
if value~=nil then
if value==__luck_loading then error("luck bundle: require cycle hit while loading module #"..id,2)end
return value
end
__luck_loaded[id]=__luck_loading
value=__luck_result(__luck_modules[id]())
__luck_loaded[id]=value
return value
end
-- module #1: __luck_root_lib_foo
__luck_modules[1]=function(...)
local foo = {}

foo.value = "from_root"

return foo
end
-- module #2: __luck_src_mid_lib_bar
__luck_modules[2]=function(...)
local bar = {}

bar.value = "from_mid"

return bar
end
local __luck_entry=function(...)
local foo = __luck_require(1)
local bar = __luck_require(2)

local result = foo.value .. " " .. bar.value
print(result)
return result
end
return __luck_entry(...)
end
