crates/luck_bundler/tests/snapshots/integration__luau_relative_require.snap
---
source: crates/luck_bundler/tests/integration.rs
expression: output
---
do
local __luck_modules={}
local __luck_loaded={}
local __luck_loading={}
local function __luck_result(...)
if select("#",...)~=1 or (...)==nil then
error("luck bundle: module must return exactly one non-nil value",0)
end
return ...
end
local function __luck_require(id)
local value=__luck_loaded[id]
if value~=nil then
if value==__luck_loading then error("luck bundle: require cycle hit while loading module #"..id,2)end
return value
end
__luck_loaded[id]=__luck_loading
value=__luck_result(__luck_modules[id]())
__luck_loaded[id]=value
return value
end
-- module #1: utils.luau
__luck_modules[1]=function(...)
local utils = {}

function utils.add(a, b)
    return a + b
end

return utils
end
-- module #2: helper.luau
__luck_modules[2]=function(...)
local helper = {}

function helper.greet(name)
    return "Hello, " .. name .. "!"
end

return helper
end
local __luck_entry=function(...)
local utils = __luck_require(1)
local helper = __luck_require(2)

local sum = utils.add(2, 3)
local greeting = helper.greet("world")
print(sum)
print(greeting)
return { sum = sum, greeting = greeting }
end
return __luck_entry(...)
end
